[package]
name = "c_struct_layout"
version = "0.1.0"
edition = "2018"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
description = "A library for enforcing stable, C-compatible data layouts in Rust."
license = "MIT"
repository = "https://github.com/bensatlantik/c_struct_layout"
homepage = "https://github.com/bensatlantik/c_struct_layout"
documentation = "https://docs.rs/c_struct_layout"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true

[dev-dependencies]
